--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>TIENDAD EN LINEA</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
+        <link rel="stylesheet" href="css/estilos.css"/>
+        <style>
+            h1{
+                color: fuchsia
+            }
+        </style>
     <body>
-        <div> Hola Desarrollo WEB!! </div>
+        <div id="contenedorTitulo">
+            <h1> HOME </h1>
+            <p>Bienvenidos a la pagina de la tienda en linea..</p>
+        </div>
+
+
+        <p class="parrafoSecundario" style="text-align: left;">Lorem ipsum dolor sit amet consectetur adipiscing elit litora cubilia primis vivamus lacinia lectus inceptos mollis sollicitudin, libero suscipit senectus pellentesque habitant diam eget maecenas nisi felis porta magnis neque eu. Nostra hendrerit non mattis suspendisse conubia suscipit curae, himenaeos purus lobortis commodo nisi vestibulum in, pharetra tempus malesuada mi senectus curabitur. Eleifend lobortis tincidunt cras a facilisis lacus gravida vitae, etiam montes augue nisl tempus at molestie auctor, mauris quisque integer tempor neque dictumst suspendisse.
+
+            Quis suspendisse tellus nulla aenean nam conubia pulvinar odio, habitant lacinia sollicitudin et turpis blandit sociis, nibh per placerat nisi metus quam mauris. Diam id sem magnis euismod quis leo senectus, vehicula luctus mi odio ut tincidunt donec pretium, sagittis a enim nec dapibus laoreet. Dui cursus habitant tortor venenatis sociosqu congue nullam dapibus malesuada per pellentesque, quisque nisi facilisi volutpat accumsan non duis magnis in fames.</p>
+        <p class="parrafoSecundario" style="text-align: center;">Lorem ipsum dolor sit amet consectetur adipiscing elit litora cubilia primis vivamus lacinia lectus inceptos mollis sollicitudin, libero suscipit senectus pellentesque habitant diam eget maecenas nisi felis porta magnis neque eu. Nostra hendrerit non mattis suspendisse conubia suscipit curae, himenaeos purus lobortis commodo nisi vestibulum in, pharetra tempus malesuada mi senectus curabitur. Eleifend lobortis tincidunt cras a facilisis lacus gravida vitae, etiam montes augue nisl tempus at molestie auctor, mauris quisque integer tempor neque dictumst suspendisse.
+
+            Quis suspendisse tellus nulla aenean nam conubia pulvinar odio, habitant lacinia sollicitudin et turpis blandit sociis, nibh per placerat nisi metus quam mauris. Diam id sem magnis euismod quis leo senectus, vehicula luctus mi odio ut tincidunt donec pretium, sagittis a enim nec dapibus laoreet. Dui cursus habitant tortor venenatis sociosqu congue nullam dapibus malesuada per pellentesque, quisque nisi facilisi volutpat accumsan non duis magnis in fames.</p>
+        <p style="text-align: right;">Lorem ipsum dolor sit amet consectetur adipiscing elit litora cubilia primis vivamus lacinia lectus inceptos mollis sollicitudin, libero suscipit senectus pellentesque habitant diam eget maecenas nisi felis porta magnis neque eu. Nostra hendrerit non mattis suspendisse conubia suscipit curae, himenaeos purus lobortis commodo nisi vestibulum in, pharetra tempus malesuada mi senectus curabitur. Eleifend lobortis tincidunt cras a facilisis lacus gravida vitae, etiam montes augue nisl tempus at molestie auctor, mauris quisque integer tempor neque dictumst suspendisse.
+
+            Quis suspendisse tellus nulla aenean nam conubia pulvinar odio, habitant lacinia sollicitudin et turpis blandit sociis, nibh per placerat nisi metus quam mauris. Diam id sem magnis euismod quis leo senectus, vehicula luctus mi odio ut tincidunt donec pretium, sagittis a enim nec dapibus laoreet. Dui cursus habitant tortor venenatis sociosqu congue nullam dapibus malesuada per pellentesque, quisque nisi facilisi volutpat accumsan non duis magnis in fames.</p>
+
+        <!--Salto de lineas forzados--> 
+        <br> 
+        <br>
+        <br>
+        <p>Ultima linea</p>
     </body>
 </html>
