--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,26 +11,100 @@
             }
         </style>
     <body>
-        <div id="contenedorTitulo">
-            <h1> HOME </h1>
-            <p>Bienvenidos a la pagina de la tienda en linea..</p>
-        </div>
+        <header id="encabezado">
+            <h1>Tienda en línea</h1>
+            <br>
+        </header>
+        <nav id="menu">
+            <a href="Ejemplo8.html">Atrás</a>
+            <a href="index.html">Home</a>
+            <a href="Ejemplo2.html">Adelante</a>
+        </nav>
 
+        <aside id="barraLateral">
+            <h2>Prodcutos más vendidos</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+        </aside>
 
-        <p class="parrafoSecundario" style="text-align: left;">Lorem ipsum dolor sit amet consectetur adipiscing elit litora cubilia primis vivamus lacinia lectus inceptos mollis sollicitudin, libero suscipit senectus pellentesque habitant diam eget maecenas nisi felis porta magnis neque eu. Nostra hendrerit non mattis suspendisse conubia suscipit curae, himenaeos purus lobortis commodo nisi vestibulum in, pharetra tempus malesuada mi senectus curabitur. Eleifend lobortis tincidunt cras a facilisis lacus gravida vitae, etiam montes augue nisl tempus at molestie auctor, mauris quisque integer tempor neque dictumst suspendisse.
+        <section id="contenido">
+            <h2>Articulos principales</h2>
+            <br>
+            <article>
+                <header>Asus Vivobook</header>
+                <p class="descripcion">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+                <figure>
+                    <img src="https://dlcdnwebimgs.asus.com/gain/dcfda3d9-8130-4cf0-886f-84554d80cb5d/w800" width="200" />
+                    <figcaption>Imagen con fines ilustrativos</figcaption>
+                </figure>
+            </article>
+            <article>
+                <header>Alienware ATD 900</header>
+                <p class="descripcion">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+                <figure>
+                    <img src="https://www.huramobil.cz/fotocache/mid/ATD-M-AW3423DWF.jpg" width="200" />
+                    <figcaption>Más vendido</figcaption>
+                </figure>
+            </article>
+            <article>
+                <header>Impresora 3D</header>
+                <p class="descripcion">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+                <figure>
+                    <img src="https://m.media-amazon.com/images/I/71hnkA62lJL._AC_SL1500_.jpg" width="200" />
+                    <figcaption>Más económico</figcaption>
+                </figure>
+            </article>
+            <br>
+            <article>
+                <h2>Líneas de producto</h2>
+                <table border="0" style="border-collapse: collapse;">
+                    <thead id="encabezadoTabla">
+                        <tr>
+                            <th>Código</th>
+                            <th>Descripción</th>
+                        </tr>
+                    </thead>
+                    <tbody id="tablaResumen">
+                        <tr>
+                            <td>1</td>
+                            <td>Teclados</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Monitores</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>Headsets</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>Baterías</td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>Cargadores</td>
+                        </tr>
+                        <tr>
+                            <td>6</td>
+                            <td>Portátiles</td>
+                        </tr>
+                    </tbody>
+                </table>
 
-            Quis suspendisse tellus nulla aenean nam conubia pulvinar odio, habitant lacinia sollicitudin et turpis blandit sociis, nibh per placerat nisi metus quam mauris. Diam id sem magnis euismod quis leo senectus, vehicula luctus mi odio ut tincidunt donec pretium, sagittis a enim nec dapibus laoreet. Dui cursus habitant tortor venenatis sociosqu congue nullam dapibus malesuada per pellentesque, quisque nisi facilisi volutpat accumsan non duis magnis in fames.</p>
-        <p class="parrafoSecundario" style="text-align: center;">Lorem ipsum dolor sit amet consectetur adipiscing elit litora cubilia primis vivamus lacinia lectus inceptos mollis sollicitudin, libero suscipit senectus pellentesque habitant diam eget maecenas nisi felis porta magnis neque eu. Nostra hendrerit non mattis suspendisse conubia suscipit curae, himenaeos purus lobortis commodo nisi vestibulum in, pharetra tempus malesuada mi senectus curabitur. Eleifend lobortis tincidunt cras a facilisis lacus gravida vitae, etiam montes augue nisl tempus at molestie auctor, mauris quisque integer tempor neque dictumst suspendisse.
-
-            Quis suspendisse tellus nulla aenean nam conubia pulvinar odio, habitant lacinia sollicitudin et turpis blandit sociis, nibh per placerat nisi metus quam mauris. Diam id sem magnis euismod quis leo senectus, vehicula luctus mi odio ut tincidunt donec pretium, sagittis a enim nec dapibus laoreet. Dui cursus habitant tortor venenatis sociosqu congue nullam dapibus malesuada per pellentesque, quisque nisi facilisi volutpat accumsan non duis magnis in fames.</p>
-        <p style="text-align: right;">Lorem ipsum dolor sit amet consectetur adipiscing elit litora cubilia primis vivamus lacinia lectus inceptos mollis sollicitudin, libero suscipit senectus pellentesque habitant diam eget maecenas nisi felis porta magnis neque eu. Nostra hendrerit non mattis suspendisse conubia suscipit curae, himenaeos purus lobortis commodo nisi vestibulum in, pharetra tempus malesuada mi senectus curabitur. Eleifend lobortis tincidunt cras a facilisis lacus gravida vitae, etiam montes augue nisl tempus at molestie auctor, mauris quisque integer tempor neque dictumst suspendisse.
-
-            Quis suspendisse tellus nulla aenean nam conubia pulvinar odio, habitant lacinia sollicitudin et turpis blandit sociis, nibh per placerat nisi metus quam mauris. Diam id sem magnis euismod quis leo senectus, vehicula luctus mi odio ut tincidunt donec pretium, sagittis a enim nec dapibus laoreet. Dui cursus habitant tortor venenatis sociosqu congue nullam dapibus malesuada per pellentesque, quisque nisi facilisi volutpat accumsan non duis magnis in fames.</p>
-
-        <!--Salto de lineas forzados--> 
-        <br> 
-        <br>
-        <br>
-        <p>Ultima linea</p>
+            </article>
+        </section>
+        <footer id="piePagina">
+            Derechos Reservados &COPY; 2024
+            <address style="display: inline;">San José</address> 
+            <address style="display: inline;">Tel 8888-7788</address>
+        </footer>
     </body>
 </html>
